--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #4e17cf;
+    background-color: black;
 
     height: 100%;
     display: flex;
@@ -32,16 +32,6 @@ body {
     justify-content: center;
 }
 
-.canvas-cont {
-    position: fixed;
-    z-index: 3;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    pointer-events: none;
-}
-
 #canvas3d {
     width: 100%;
     height: 100%;
@@ -49,6 +39,9 @@ body {
 
 nav {
     width: 100%;
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
 
 p {
@@ -64,16 +57,16 @@ p {
     position: absolute;
     right: 0;
     top: 0;
-    background-color: black;
+    background-image: url('./assets/background.gif');
     z-index: -5;
 }
 
 h1 {
     font-size: 10vw;
     position: absolute;
-    top: calc(100vh - 50vw);
+    top: 0;
     font-weight: 800;
-    left: 20px;
+    left: 160px;
     line-height: 1;
     letter-spacing: -5px;
     color: white;
@@ -101,6 +94,15 @@ h2 {
     padding: 1%;
 }
 
+.part2-social {
+    width: 60%;
+    gap: 40px;
+}
+
+.part1-video {
+    margin: 0 auto;
+}
+
 button {
     border: 1px solid rgba(255, 255, 255, 0.4);
     background-color: transparent;
@@ -120,13 +122,20 @@ button:hover {
 #part2 {
     height: 150vh;
     width: 100%;
+    align-items: center;
+    gap: 2rem;
+}
+
+#part2 h2 {
+    margin-bottom: 0
 }
 
 #part3 {
-    height: 120vh;
-    justify-content: flex-end !important;
+    height: 60vh;
+    justify-content: space-between;
     align-items: center !important;
     margin-bottom: 50px;
+    text-align: center;
 }
 
 a {
@@ -179,7 +188,7 @@ a {
     }
 
     .part1-info,
-    .part2-info {
+    .part2-info, .part2-social {
         width: 100%;
     }
 
