--- a/style.css
+++ b/style.css
@@ -61,6 +61,16 @@ p {
     z-index: -5;
 }
 
+#hero-gif {
+    position: absolute;
+    right: -10%;
+    width: 60%;
+}
+
+#hero-gif img {
+    max-width: 100%;
+}
+
 h1 {
     font-size: 10vw;
     position: absolute;
